--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   fluttertoast: ^8.1.1
   get: ^4.6.5
+  image_picker: ^0.8.6
   loading_animation_widget: ^1.2.0+3
   lottie: ^1.4.3
 
