--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.1.0
   firebase_core: ^2.1.1
+  firebase_database: ^10.0.6
   firebase_storage: ^11.0.3
   flutter:
     sdk: flutter
